feat: add some button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<script src="built/bundle.js"></script>
+  <button id="get">get</button>
+  <button id="set">set</button>
+  <button id="push">push</button>
+  <script src="built/bundle.js"></script>
 </body>
 </html>
